--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ main {
   border-radius: 0.25rem;
 }
 
-#homer .tex {
+#home .tex {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
