Correcting the Html divider-1

--- a/style.css
+++ b/style.css
@@ -146,17 +146,17 @@ main {
   right: 2.93rem;
 }
 
-#home .image,
+#home .image image,
 #home .image::before {
   border-radius: 0.25rem;
 }
 
-#home .tex {
+#home .text {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
 }
-#home .tex h1 {
+#home .text h1 {
   margin-bottom: 1rem;
 }
 #home .text p {
