--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?dlfjg');
-  src:  url('fonts/icomoon.eot?dlfjg#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?dlfjg') format('truetype'),
-    url('fonts/icomoon.woff?dlfjg') format('woff'),
-    url('fonts/icomoon.svg?dlfjg#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?10sr7i');
+  src:  url('fonts/icomoon.eot?10sr7i#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?10sr7i') format('truetype'),
+    url('fonts/icomoon.woff?10sr7i') format('woff'),
+    url('fonts/icomoon.svg?10sr7i#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close:before {
+  content: "\e90b";
+}
 .icon-phone:before {
   content: "\e900";
 }
