--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,16 +1,17 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?10sr7i');
-  src:  url('fonts/icomoon.eot?10sr7i#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?10sr7i') format('truetype'),
-    url('fonts/icomoon.woff?10sr7i') format('woff'),
-    url('fonts/icomoon.svg?10sr7i#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?i1djun');
+  src: url('fonts/icomoon.eot?i1djun#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i1djun') format('truetype'),
+    url('fonts/icomoon.woff?i1djun') format('woff'),
+    url('fonts/icomoon.svg?i1djun#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -25,48 +26,51 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-chevron-up:before {
+  content: '\e90c';
+}
 .icon-close:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-phone:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-cosmetic:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-facebook:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-instagram:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-mail:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-map-pin:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-menu:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-trim:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-whatsapp:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-woman-hair:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-youtube:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-heart:before {
-  content: "\e9da";
+  content: '\e9da';
 }
 .icon-heart-broken:before {
-  content: "\e9db";
+  content: '\e9db';
 }
 .icon-wink2:before {
-  content: "\e9e8";
+  content: '\e9e8';
 }
