[Mission: Origin] Aula 05 – Finalizando o projeto

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ img {
 
   /*Fonts*/
   --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 /****BASE***/
@@ -42,14 +46,14 @@ html {
 }
 
 body {
-  font: 400 1rem 'DM Sans', sans-serif;
+  font: 400 1rem var(--body-font);
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 var(--title-font-size) 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -62,7 +66,7 @@ body {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'DM Sans', sans-serif;
+  font: 500 1rem var(--body-font)
   transition: background 0.3s;
 }
 
@@ -100,13 +104,16 @@ body {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
   margin-bottom: 1rem;
 }
 
+.section .subtitle {
+  font-size: var(--subtitle-font-size);
+}
 .section header {
   margin-bottom: 4rem;
 }
@@ -132,13 +139,9 @@ body {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
-
 /****LOGO****/
 .logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -166,11 +169,13 @@ nav ul li a {
   transition: color 0.2s;
   position: relative;
 }
-nav ul li a:hover {
+
+nav ul li a:hover,
+nav ul li a.active{
   color: var(--base-color);
 }
 
-nav ul li a::after {
+nav ul li a::after{
   content: '';
   width: 0%;
   height: 2px;
@@ -183,8 +188,10 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.activer::after {
   width: 100%;
+  
 }
 
 nav .menu {
@@ -455,6 +462,10 @@ footer {
   background: var(--base-color);
 }
 
+footer.section {
+  padding: 4rem 0;
+}
+
 footer .logo {
   display: inline-block;
   margin-bottom: 1.5rem;
@@ -468,6 +479,11 @@ footer .brand p {
 footer i {
   font-size: 1.5rem;
   color: var(--text-color-light);
+}
+
+footer .social {
+  grid-auto-flow: column;
+  width: fit-content;
 }
 
 footer .social a {
@@ -510,10 +526,130 @@ footer .social a:hover {
 
 /*MEDIA QUERIES*/
 /*extra large divices: 1200> */
+@media (min-width: 1200px) {
+  /*reusable classes*/
+  .container{
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header{
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+ 
+  .button{
+    height: 3.125rem;
+  }
+
+   /*navigation*/
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--body-font);
+    -webKit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active{
+  font-weight: bold;
+  -webKit-font-smoothing: auto;
+
+  }
+
+  nav .icon-menu{
+    display: none;
+  }
+  
+  /*layout*/
+
+  /*main*/
+  main {
+    margin-top: var(--header-height);
+  }
+  
+  /*services*/
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /*testimonials*/
+  #testimonials .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #home .container{
+    grid-auto-flow: column;
+    width: fit-content;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+  #home .image{
+    order: 1;
+  }
+
+  #home .text{
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+  }
+
+  /*about*/
+  #about .container{
+    margin: 0 auto;
+    grid-auto-flow: column;
+  }
+
+  /*contact*/
+  #contact .container{
+    grid-auto-flow: column;
+    align-items: center;
+  }
+    #contact .text{
+    max-width: 25rem;
+  }
+
+  /*footer*/
+  footer.section{
+    padding: 3.75rem 0;
+  }
+  
+  footer .container{
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo{
+    font-size: 2.25rem;
+  }
+}
 /*large devices: 992 >*/
 @media (min-width: 992px) {
   :root {
-    --title-font-size: 2.2rem;
+    --title-font-size: 2.25rem;
+    --subtitle-font-size: 1.125rem;
   }
 }
 /*medium dices: 767 >*/
